--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,5 @@ block content
   br
   br
   .alerts
-  script(src='/socket.io/socket.io.js')
-  script.
-    var socket = io();
+  script(src='/javascripts/pi.js', type='text/javascript')
 
