--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js', type='text/javascript')
-    script(src='/javascripts/pi.js', type='text/javascript')
+    script(src='/socket.io/socket.io.js')
   body
     .container
       block content
