--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,8 +4,10 @@ html
     title= title
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==", crossorigin="anonymous")
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js', type='text/javascript')
     script(src='/socket.io/socket.io.js')
+    meta(name="viewport" content="width=device-width, initial-scale=1")
   body
     .container
       block content
